--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Human Expenditure Program - Human Expenditure Program</title>
     <meta name="keywords" content="human expenditure program">
     <meta name="news_keywords" content="human expenditure program">
-    <meta name="description" content="Human Expenditure Program - Human Expenditure Program">
+    <meta name="description" content="Human Expenditure Program, also known as BloodMoney 2, puts you on a mission to manage Harvey's booth to earn money to pay the huge hospital bill.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -267,4 +267,5 @@
     <script src="rs/js/footer.js"></script>
 </footer>
 </body>
+
 </html>
