--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="distribution" content="Global">
     <meta http-equiv="audience" content="General">
     <link rel="icon" href="rs/imgs/human-expenditure-program1.png">
-    <title>Human Expenditure Program - Human Expenditure Program</title>
+    <title>Human Expenditure Program - BLOODMONEY! 2</title>
     <meta name="keywords" content="human expenditure program">
     <meta name="news_keywords" content="human expenditure program">
     <meta name="description" content="Human Expenditure Program, also known as BloodMoney 2, puts you on a mission to manage Harvey's booth to earn money to pay the huge hospital bill.">
@@ -278,5 +278,6 @@
 </body>
 
 </html>
+
 
 
