--- a/exhibit-of-sorrows.html
+++ b/exhibit-of-sorrows.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="utf-8">
+	<meta http-equiv="refresh" content="0; url=https://humanexpenditureprogram.github.io/exhibit-of-sorrows">
+    <script type="text/javascript">
+        window.location.href = "https://bloodmoney2.io/exhibit-of-sorrows"
+    </script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="content-language" content="en">
@@ -247,3 +251,4 @@
 </body>
 
 </html>
+
